@@ -46,6 +46,8 @@ void AddSC_fake_commandscript();
 void AddSC_arena_spectator_script();
 // TOP 5 Killers
 void AddSC_top5_killers();
+// TOP 5 Arenateams
+void AddSC_top5_arenateams();
 
 // spells
 void AddSC_deathknight_spell_scripts();
@@ -1363,5 +1365,7 @@ void AddCustomScripts()
     AddSC_arena_spectator_script();
     // Top 5 Killers
     AddSC_top5_killers();
+    // Top 5 Arenateams
+    AddSC_top5_arenateams();
 #endif
 }
